infra/apps/mirai-hub/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirai-hub
  namespace: mirai-hub
spec:
  selector:
    app.kubernetes.io/name: mirai-hub
  ports:
    - name: http
      port: 8000
      targetPort: http
